[nikhil]added:forget and reset
