# src/routes/user.route.ts
@@ -1,13 +1,13 @@
 import express, { IRouter } from 'express';
 import userController from '../controllers/user.controller';
 import userValidator from '../validators/user.validator';
-import { userAuth } from '../middlewares/auth.middleware';
+import { userAuth,forgetUserAuth } from '../middlewares/auth.middleware';
 
 class UserRoutes {
   private UserController = new userController();
   private router = express.Router();
   private UserValidator = new userValidator();
-
+                              
   constructor() {
     this.routes();
   }
@@ -18,8 +18,7 @@ class UserRoutes {
     //this.router.get('', this.UserController.getAllUsers);
 
     //route to create a new user
-    this.router.post(
-      '/register',
+    this.router.post('/register',
       //this.UserValidator.newUser,
       this.UserController.register
     );
@@ -28,13 +27,21 @@ class UserRoutes {
     this.router.post('/login', //userAuth, 
     this.UserController.login);
 
-    this.router.get('/getuser/:id', userAuth,  this.UserController.getUser);
+    //this.router.get('/getuser/:id', userAuth,  this.UserController.getUser);
 
     //route to update a user by their id
-    this.router.put('/:id', this.UserController.updateUser);
+    this.router.post('update/:id', this.UserController.updateUser);
+
+    this.router.post('/changePass', userAuth, this.UserController.updateUserPassword);
 
     //route to delete a user by their id
     //this.router.delete('/:id', this.UserController.deleteUser);
+
+    this.router.post('/forget', this.UserController.forgetUser)
+
+    this.router.post('/reset', forgetUserAuth , this.UserController.reset);
+
+
   };
 
   public getRoutes = (): IRouter => {
